k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go_ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: go.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go_svc
            port:
              number: 80
